# pipeline.loksabha-qna

./: .eslintrc.cjs  .gitignore  README.md  a.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
api/: server.ts  tsconfig.json
api/py/: main.py
api/ts/: server.ts  tsconfig.json
cli/py/: main.py
docs/: README.md  diagrams.json  index.ts  types.ts
docs/commands/: update-graph.ts
docs/parser/: __init__.py  python_parser.py  test_parser.py
notebooks/: hello.ipynb  requirements.txt  update_kernels.py
notebooks/.jupyter/: jupyter_notebook_config.py
py-wa/: requirements.txt
py-wa/app/: worker.py
py-wa/src/: activities.py  worker.py
py-wa/tests/: debug_test.py
reports/api_usage/: gemini_2025-05-17.json  gemini_2025-05-27.json  gemini_2025-05-28.json  gemini_2025-06-05.json
sansad-18/: members-questions-count.json  members.json
sansad-18/ii/: 18_ii.qna.json  18_ii.qna.source.json
sansad-18/iii/: 18_iii.qna.json
sansad-18/iv/: 18_iv.qna.json
sansad/18/: date-questions-count.json  ministeries.json  ministries-questions-count.json  sessions-questions-count.json
scripts/: README_deduplication.md  deduplicate_failed_downloads.ts  delete-file-by-name.ts  delete-folder-by-name.ts  migrate-progress-file-format.ts  move-timestamps.ts  rename-files.ts  sample_data_structure.json  watch-module-graph.ts
tools/: diagram-manager.ts
tools/git-hooks/: pre-commit
ts-wa/: activities.ts  start-workflow.ts  worker.ts  workflow.ts
ts-wa/src/: activities.ts  worker.ts  workflow.ts
workflows/py/: worker.py
(+6492 files in other folders)
