[project]
name = "pipeline-loksabha-qna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs>=2.4.6",
    "aiohttp>=3.11.12",
    "anthropic>=0.46.0",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-identity>=1.21.0",
    "beautifulsoup4>=4.13.3",
    "camelot-py[plot]>=1.0.0",
    "colorlog>=6.9.0",
    "fastapi>=0.115.12",
    "google-genai>=0.8.4",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "marker-pdf>=1.5.5",
    "numpy>=2.2.4",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "temporalio>=1.10.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.1",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "ruff>=0.3.0",
    "debugpy>=1.8.0"
]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.ruff]
line-length = 120
target-version = 'py38'
select = ["E", "F", "B", "I"]
ignore = ["E501"]
